force-app/main/default/objects/Transfer_Document__c/Transfer_Document__c.object-meta.xml
<CustomObject>
    <description>Legal agreement documents associated with a share transfer in the DPEG Investor Relations app. Tracks document status and stores file metadata and an external storage link.</description>
    <label>Transfer Document</label>
    <nameField>
        <displayFormat>TRDOC-{0000}</displayFormat>
        <label>Transfer Document Name</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>