force-app/main/default/objects/Transfer_Document__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <description>Execution status of the transfer agreement document.</description>
    <inlineHelpText>Pending = awaiting signature; Signed = executed; Finalized = recorded.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>