force-app/main/default/objects/Transfer_Document__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <label>Document URL</label>
    <description>External storage link (e.g., OneDrive) to the transfer document.</description>
    <inlineHelpText>Paste the link to the stored document.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>