force-app/main/default/objects/Transfer_Document__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <description>Name of the stored transfer agreement file.</description>
    <inlineHelpText>Enter the file name of the transfer document.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>