force-app/main/default/objects/Transfer_Document__c/fields/Share_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Share_Transfer__c</fullName>
    <label>Share Transfer</label>
    <description>The share transfer this legal document is associated with.</description>
    <inlineHelpText>Select the related share transfer.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Share_Transfer__c</referenceTo>
    <relationshipLabel>Transfer Documents</relationshipLabel>
    <relationshipName>Transfer_Documents</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>